<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.tripplleat.trippleattcustomer.ui.auth.viewmodel.AuthViewModal" />

    </data>

    <LinearLayout
        android:id="@+id/OtpVerificationFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.auth.customer.OtpVerificationFragment">

        <TextView
            android:id="@+id/text"
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="21sp"
            android:fontFamily="@font/verdana"
            android:textColor="@android:color/black"
            android:text="@string/otpstring"/>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/otp1"
                android:layout_marginStart="5dp"
                android:background="@drawable/stroke_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLength="1"
                android:text="@={viewmodel.otp1}"
                android:layout_weight="0.2"
                android:textAlignment="center"
                />
            <EditText
                android:id="@+id/otp2"
                android:layout_marginStart="5dp"
                android:background="@drawable/stroke_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLength="1"
                android:text="@={viewmodel.otp2}"
                android:layout_weight="0.2"
                android:textAlignment="center"/>
            <EditText
                android:id="@+id/otp3"
                android:layout_marginStart="5dp"
                android:background="@drawable/stroke_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLength="1"
                android:layout_weight="0.2"
                android:textAlignment="center"
                android:text="@={viewmodel.otp3}"
                />
            <EditText
                android:id="@+id/otp4"
                android:layout_marginStart="5dp"
                android:background="@drawable/stroke_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLength="1"
                android:layout_weight="0.2"
                android:textAlignment="center"
                android:text="@={viewmodel.otp4}"
                />
            <EditText
                android:id="@+id/otp5"
                android:layout_marginStart="5dp"
                android:background="@drawable/stroke_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLength="1"
                android:layout_weight="0.2"
                android:textAlignment="center"
                android:text="@={viewmodel.otp5}"
                />
            <EditText
                android:id="@+id/otp6"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/stroke_otp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:maxLines="1"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textSize="25sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:maxLength="1"
                android:layout_weight="0.2"
                android:textAlignment="center"
                android:text="@={viewmodel.otp6}"
                />
        </LinearLayout>
        <TextView
            android:clickable="false"
            android:onClick="@{viewmodel::resendCode}"
            android:fontFamily="@font/verdana"
            android:id="@+id/resend_code"
            android:layout_marginTop="20dp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_code"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="#444545"
            />

        <Button
            android:fontFamily="@font/verdana"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_login"
            android:backgroundTint="#0B0B0B"
            android:layout_marginTop="20dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/verify"
            android:textSize="21sp"
            android:onClick="@{viewmodel.verifyOtpClicked}"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/countdown"
            android:layout_marginTop="150dp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="29sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/verdana"
            android:onClick="@{viewmodel.gotoDriverlogin}"
            android:text="Deliver With Us"
            android:textAlignment="center"
            android:textColor="#393939"
            android:textSize="25dp"
            android:textStyle="bold" />

    </LinearLayout>

</layout>
